--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,5 +1,3 @@
-name: Release Please
-
 on:
   push:
     branches:
@@ -9,15 +7,39 @@ permissions:
   contents: write
   pull-requests: write
 
+#-----------------------------------------------------------#
+# DESCRIPTION: Checkout the repository, generate new semver #
+# Open a PR, on merge, create a new release, tag it, and    #
+# publish to npm.                                           #
+#-----------------------------------------------------------#
+name: 🚀 Release
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: ⇅ Checkout repository
         uses: actions/checkout@v2
 
-      - name: Run Release Please
-        uses: googleapis/release-please-action@v4
+      - name: 🙏🏼 Run Release Please
+        id: release
+        uses: google-github-actions/release-please-action@v4
         with:
           token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
-          release-type: simple
+          release-type: node
+
+      - name: ⚙️ Set up Node.js
+        if: ${{ steps.release.outputs.release_created == 'true' }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: "14"
+          registry-url: "https://registry.npmjs.org/"
+
+      - name: 🔗 Install dependencies
+        if: ${{ steps.release.outputs.release_created == 'true' }}
+        run: npm install
+
+      - name: 📦 Publish package to npm
+        if: ${{ steps.release.outputs.release_created == 'true' }}
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
