--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "app",
-  "private": true,
+  "name": "octo-labels",
+  "author": {
+    "name": "Dennis Bruijn",
+    "email": "dbbruijn@gmail.com"
+  },
+  "private": false,
   "version": "1.1.0",
   "type": "module",
+  "license": "MIT",
   "scripts": {
     "add": "node scripts/add-github-labels.js",
     "delete": "node scripts/delete-github-labels.js",
